# dbgg-bolsonaro-lula

./: .geminirules  .gitignore  index.html  metodologia_simulacao.md  package-lock.json  package.json  pyproject.toml  task.md
output/: _gerar_ipca_selic_log.txt  _gerar_ipca_selic_log_resume.txt  _gerar_pib_anual_log.txt  painel_focus_mvp.parquet  pib_focus_trim_1t2023.csv
output/DIVIDA/: HANDOFF.md  comparacao_focus_dbgg_anual.csv  dbgg_trajetorias.csv  dlsp_sgs4513_anual.csv  focus_dlsp_anual.csv  focus_dlsp_com_realizado.csv  previa_dbgg_2025.csv  previa_dbgg_2025.txt
output/PIB/: comparacao_focus_ibge_pib_trimestral.csv  focus_pib_total_com_ibge_realizado.csv  focus_pib_total_trimestral.csv  ibge_pib_mercado_volume_trimestral.csv  metadados_pib_trimestral.txt
output/exportacao_ia/: guia_prompts_ia.md  relatorio_focus_ibge_notebooklm.md
output/exportacao_ia_2021/: metodologia_calculo_ipca.md  relatorio_ipca_2021_notebooklm.md
scripts/: comparativos_dbgg_periodos.py  empacotar_port_divida.py  exportar_dados_web.py  exportar_dbgg_anual.py  exportar_divida_dlsp.py  exportar_graficos_publicacao.py  exportar_para_ia.py  exportar_para_ia_2021.py  exportar_pib_trimestral.py  gerar_ipca_selic_anos.ps1  gerar_ipca_selic_anos_resume.ps1  gerar_pib_anual_anos.ps1  gerar_pib_anual_anos_resume.ps1  graficos_divida_dlsp.py  graficos_pib_trimestral.py  preparar_notebooklm_divida.py  previa_dbgg_2025.py  previa_dlsp_reais.py  push-to-github.ps1  setup-mac.sh  simular_dbgg.py  sync-data.mjs  validar_pib_trimestre.py
src/: App.css  App.tsx  loadData.ts  types.ts
(+688 files in other folders)
